fix: headings collapsing when there is no content to separate them (#244)
* fix: nested headings collapsing when there is no content on the parent heading

* fix: breakpoint to not bork stuff on mobile

* refactor: simple

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -89,6 +89,7 @@
 
   .anchor-heading {
     text-decoration: none !important;
+    display: block;
   }
 
   .anchor-heading > *:after {
